完善后台管理员权限控制，恢复CF的vjudge判题

--- a/hoj-springboot/DataBackup/src/main/resources/templates/emailTemplate_resetPassword.html
+++ b/hoj-springboot/DataBackup/src/main/resources/templates/emailTemplate_resetPassword.html
@@ -2,7 +2,7 @@
 <html lang="zh" xmlns:th=http://www.thymeleaf.org>
     <head>
         <meta charset="UTF-8">
-        <title>HOJ的重置密码邮件</title>
+        <title>[[${OJ_SHORT_NAME}]]的重置密码邮件</title>
     </head>
     <body>
         <div style="background: white;
@@ -37,7 +37,7 @@
                     </h3>
                     <p style="text-indent:2em;">
                         您收到这封电子邮件是因为您 (也可能是某人冒充您的名义) 在<a style=" text-decoration: none;color: #1bc3fb "
-                                                         target="_blank" th:href="${OJ_URL}" rel="noopener">&nbsp;HOJ&nbsp;</a>上进行密码重置操作。假如这不是您本人所申请, 请不用理会这封电子邮件, 但是如果您持续收到这类的信件骚扰, 请您尽快联络管理员。
+                                                         target="_blank" th:href="${OJ_URL}" rel="noopener">&nbsp;[[${OJ_SHORT_NAME}]]&nbsp;</a>上进行密码重置操作。假如这不是您本人所申请, 请不用理会这封电子邮件, 但是如果您持续收到这类的信件骚扰, 请您尽快联络管理员。
                     </p>
                     <div style="background: #fafafa repeating-linear-gradient(-45deg,#fff,#fff 1.125rem,transparent 1.125rem,transparent 2.25rem);box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);margin:20px 0px;padding:15px;border-radius:5px;font-size:14px;color:#555555;text-align: center; ">
                         请点击下面的链接完成后续重置密码的流程：<br>
