--- a/hoj-springboot/DataBackup/src/main/resources/templates/emailTemplate_testEmail.html
+++ b/hoj-springboot/DataBackup/src/main/resources/templates/emailTemplate_testEmail.html
@@ -2,7 +2,7 @@
 <html lang="zh" xmlns:th=http://www.thymeleaf.org>
     <head>
         <meta charset="UTF-8">
-        <title>超级管理员测试邮箱可用性邮件</title>
+        <title>[[${OJ_SHORT_NAME}]]超级管理员测试邮箱可用性邮件</title>
     </head>
     <body>
         <div style="background: white;
@@ -38,7 +38,7 @@
                     </h3>
                     <p style="text-indent:2em;">
                         您收到这封电子邮件是因为您在<a style=" text-decoration: none;color: #1bc3fb "
-                                                         target="_blank" th:href="${OJ_URL}" rel="noopener">&nbsp;HOJ&nbsp;</a>上进行邮箱配置更新，然后进行邮箱可行性的测试。
+                                                         target="_blank" th:href="${OJ_URL}" rel="noopener">&nbsp;[[${OJ_SHORT_NAME}]]&nbsp;</a>上进行邮箱配置更新，然后进行邮箱可行性的测试。
                     </p>
                     <div style="background: #fafafa repeating-linear-gradient(-45deg,#fff,#fff 1.125rem,transparent 1.125rem,transparent 2.25rem);box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);margin:20px 0px;padding:15px;border-radius:5px;font-size:14px;color:#555555;text-align: center; ">
                         经过本邮件的接收，可证实：<br>
