--- a/hoj-springboot/DataBackup/src/main/resources/templates/emailTemplate_registerCode.html
+++ b/hoj-springboot/DataBackup/src/main/resources/templates/emailTemplate_registerCode.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th=http://www.thymeleaf.org>
     <head>
-        <meta charset=UTF-8>
+        <meta charset="UTF-8">
         <title>[[${OJ_SHORT_NAME}]]用户注册验证码</title>
     </head>
     <body>
